<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/bg_rect_rounded"
        android:padding="12dp"
        android:minWidth="265dp"
        android:layout_width="265dp"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textTitle"
            android:textAlignment="center"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/purple_700"
            android:text="@string/dialog_message_title"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            android:id="@+id/textMessage"
            android:layout_marginTop="14dp"
            android:text="@string/dialog_message_desc"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintEnd_toStartOf="@+id/textYes"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            android:id="@+id/textNo"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="@dimen/font_medium"
            android:text="@string/dialog_message_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            android:id="@+id/textYes"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="@dimen/font_medium"
            android:text="@string/dialog_message_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>